@@ -17,7 +17,8 @@
 	
 	* inst/include/Rcpp/module/Module_generated_PointerMethod.h: idem
 	
-
+	* R/Module.R: grab method docstrings
+	
 2010-11-20  John M Chambers  <jmc@r-project.org>
 
 	* R/Module.R: now checks for the existence of a default constructor
